amended projects section make sure the images don't squished on desktop keep the same style. Added description

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -86,7 +86,7 @@
 }
 
 /* Desktop: 4 columns */
-@media (min-width: 1024px) {
+@media (min-width: 1260px) {
   .projects-grid {
     grid-template-columns: repeat(4, 1fr);
   }
